# efm32gg-pacs

./: CHANGELOG.md  README.md
.github/workflows/: pacs.yml
pacs/efm32gg/: Cargo.toml  README.md  build.rs
pacs/efm32gg/efm32gg230/: Cargo.toml
pacs/efm32gg/efm32gg232/: Cargo.toml
pacs/efm32gg/efm32gg280/: Cargo.toml
pacs/efm32gg/efm32gg290/: Cargo.toml
pacs/efm32gg/efm32gg295/: Cargo.toml
pacs/efm32gg/efm32gg330/: Cargo.toml
pacs/efm32gg/efm32gg332/: Cargo.toml
pacs/efm32gg/efm32gg380/: Cargo.toml
pacs/efm32gg/efm32gg390/: Cargo.toml
pacs/efm32gg/efm32gg395/: Cargo.toml
pacs/efm32gg/efm32gg840/: Cargo.toml
pacs/efm32gg/efm32gg842/: Cargo.toml
pacs/efm32gg/efm32gg880/: Cargo.toml
pacs/efm32gg/efm32gg890/: Cargo.toml
pacs/efm32gg/efm32gg895/: Cargo.toml
pacs/efm32gg/efm32gg900/: Cargo.toml
pacs/efm32gg/efm32gg940/: Cargo.toml
pacs/efm32gg/efm32gg942/: Cargo.toml
pacs/efm32gg/efm32gg980/: Cargo.toml
pacs/efm32gg/efm32gg990/: Cargo.toml
pacs/efm32gg/efm32gg995/: Cargo.toml
pacs/efm32gg/src/: lib.rs
pacs/efm32gg/src/efm32gg230/: mod.rs
pacs/efm32gg/src/efm32gg232/: mod.rs
pacs/efm32gg/src/efm32gg280/: mod.rs
pacs/efm32gg/src/efm32gg290/: mod.rs
pacs/efm32gg/src/efm32gg295/: mod.rs
pacs/efm32gg/src/efm32gg330/: mod.rs
pacs/efm32gg/src/efm32gg332/: mod.rs
pacs/efm32gg/src/efm32gg380/: mod.rs
pacs/efm32gg/src/efm32gg390/: mod.rs
pacs/efm32gg/src/efm32gg395/: mod.rs
pacs/efm32gg/src/efm32gg840/: mod.rs
pacs/efm32gg/src/efm32gg842/: mod.rs
pacs/efm32gg/src/efm32gg880/: mod.rs
pacs/efm32gg/src/efm32gg890/: mod.rs
pacs/efm32gg/src/efm32gg895/: mod.rs
pacs/efm32gg/src/efm32gg900/: mod.rs
pacs/efm32gg/src/efm32gg940/: mod.rs
pacs/efm32gg/src/efm32gg942/: mod.rs
pacs/efm32gg/src/efm32gg980/: mod.rs
pacs/efm32gg/src/efm32gg990/: emu.rs  mod.rs
pacs/efm32gg/src/efm32gg995/: mod.rs
pacs/efm32gg11b/: Cargo.toml  README.md  build.rs
pacs/efm32gg11b/efm32gg11b110/: Cargo.toml
pacs/efm32gg11b/efm32gg11b110/src/: lib.rs
pacs/efm32gg11b/efm32gg11b120/: Cargo.toml
pacs/efm32gg11b/efm32gg11b120/src/: lib.rs
pacs/efm32gg11b/efm32gg11b310/: Cargo.toml
pacs/efm32gg11b/efm32gg11b310/src/: lib.rs
pacs/efm32gg11b/efm32gg11b320/: Cargo.toml
pacs/efm32gg11b/efm32gg11b320/src/: lib.rs
pacs/efm32gg11b/efm32gg11b420/: Cargo.toml
pacs/efm32gg11b/efm32gg11b420/src/: lib.rs
pacs/efm32gg11b/efm32gg11b510/: Cargo.toml
pacs/efm32gg11b/efm32gg11b520/: Cargo.toml
pacs/efm32gg11b/efm32gg11b820/: Cargo.toml
pacs/efm32gg11b/efm32gg11b840/: Cargo.toml
pacs/efm32gg11b/src/: lib.rs
pacs/efm32gg11b/src/efm32gg11b110/: cmu.rs  mod.rs
pacs/efm32gg11b/src/efm32gg11b120/: gpio.rs  mod.rs
pacs/efm32gg11b/src/efm32gg11b310/: mod.rs  prs.rs
pacs/efm32gg11b/src/efm32gg11b320/: fpueh.rs  ldma.rs  mod.rs
pacs/efm32gg11b/src/efm32gg11b420/: mod.rs
pacs/efm32gg11b/src/efm32gg11b510/: mod.rs
pacs/efm32gg11b/src/efm32gg11b520/: mod.rs
pacs/efm32gg11b/src/efm32gg11b820/: cmu.rs  eth.rs  mod.rs  sdio.rs  usb.rs
pacs/efm32gg11b/src/efm32gg11b840/: mod.rs  msc.rs
pacs/efm32gg12b/: Cargo.toml  README.md  build.rs
pacs/efm32gg12b/efm32gg12b110/: Cargo.toml
pacs/efm32gg12b/efm32gg12b130/: Cargo.toml
pacs/efm32gg12b/efm32gg12b310/: Cargo.toml
pacs/efm32gg12b/efm32gg12b330/: Cargo.toml
pacs/efm32gg12b/efm32gg12b390/: Cargo.toml
pacs/efm32gg12b/efm32gg12b390/src/: lib.rs
pacs/efm32gg12b/efm32gg12b410/: Cargo.toml
pacs/efm32gg12b/efm32gg12b430/: Cargo.toml
pacs/efm32gg12b/efm32gg12b510/: Cargo.toml
pacs/efm32gg12b/efm32gg12b530/: Cargo.toml
pacs/efm32gg12b/efm32gg12b810/: Cargo.toml
pacs/efm32gg12b/efm32gg12b830/: Cargo.toml
pacs/efm32gg12b/src/: lib.rs
(+916 files in other folders)
