[package]
name = "efm32gg12b-pac"
description = "Peripheral access API for EFM32GG12B MCU (generated using svd2rust)"
homepage = "https://github.com/efm32-rs/efm32gg-pacs"
version = "0.1.4"
authors = [ "Vladimir Petrigo <vladimir.petrigo@gmail.com>",]
license = "BSD-3-Clause"
keywords = [ "no-std", "arm", "cortex-m", "efm32",]
categories = [ "embedded", "hardware-support", "no-std",]
repository = "https://github.com/efm32-rs/efm32gg-pacs"
readme = "README.md"
edition = "2021"

[dependencies]
cortex-m = "~0.7"
vcell = "~0.1"

[features]
default = [ "rt",]
rt = [ "cortex-m-rt/device",]
critical-section = [ "dep:critical-section",]
efm32gg12b110 = []
efm32gg12b130 = []
efm32gg12b310 = []
efm32gg12b330 = []
efm32gg12b390 = []
efm32gg12b410 = []
efm32gg12b430 = []
efm32gg12b510 = []
efm32gg12b530 = []
efm32gg12b810 = []
efm32gg12b830 = []

[dependencies.portable-atomic]
version = "~1"
default-features = false

[dependencies.critical-section]
version = "~1"
optional = true

[dependencies.cortex-m-rt]
version = "~0.7"
optional = true

[package.metadata.docs.rs]
features = [ "rt", "efm32gg12b110", "efm32gg12b830",]
default-target = "thumbv7em-none-eabihf"
targets = []
